--- a/Colaboratory/Base/get_jpx_ticker_list.ipynb
+++ b/Colaboratory/Base/get_jpx_ticker_list.ipynb
@@ -1005,7 +1005,9 @@
       "cell_type": "markdown",
       "source": [
         "## ※ yfinanceでの使用\n",
-        "証券コードに\".T\"がついた文字列になります。上記の方法で取得した証券コードはint型ですので，文字列型に変換して\".T\"を後ろにつける必要があります。"
+        "Pythonから金融情報を取得するためのライブラリであるyfinanceでは，日本取引所グループで扱われている証券コードに\".T\"がついた文字列で情報を取得します。\n",
+        "\n",
+        "上記の方法で取得した証券コードはint型ですので，文字列型に変換して\".T\"を後ろにつける必要があります。"
       ],
       "metadata": {
         "id": "3S_d8noQ9kJr"
