--- a/Colaboratory/Macro_Economic_Data/get_world_bank_open_data.ipynb
+++ b/Colaboratory/Macro_Economic_Data/get_world_bank_open_data.ipynb
@@ -18,7 +18,18 @@
       "cell_type": "markdown",
       "source": [
         "# 世界銀行オープンデータの取得\n",
-        "\n"
+        "\n",
+        "---\n",
+        "[Google Colaboratoryで開く](https://colab.research.google.com/github/202408pythonciot/Data_Science_in_Finance/blob/main/Colaboratory/Macro_Economic_Data/get_world_bank_open_data.ipynb)\n",
+        "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/202408pythonciot/Data_Science_in_Finance/blob/main/Colaboratory/Macro_Economic_Data/get_world_bank_open_data.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>\n",
+        "\n",
+        "---\n",
+        "世界銀行は自由にアクセスできるオープンデータとして様々なデータを公開しています。これらのデータはWorld Bank APIを経由して取得することができます。\n",
+        "\n",
+        "ここでは指標別に世界銀行オープンデータを取得する方法を説明します。"
       ],
       "metadata": {
         "id": "maaX6Bac1Sae"
