--- a/Colaboratory/Base/get_index_corr.ipynb
+++ b/Colaboratory/Base/get_index_corr.ipynb
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "gUuBfHyWBOPG"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "b7r1S2KVAchC"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "VX_2-_kRAO1L"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
         "id": "Pcc6bIk6Ahyq",
         "outputId": "9721552a-88eb-4629-9d5a-3fd5c1d27cee"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "7DCJB_nZBJR4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +342,7 @@
         "id": "EqK-CayLBUmf",
         "outputId": "c97ca2ad-7674-475c-de61-947fb89aea63"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,6 +366,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Pandasのデータフレームの`corr`メソッドを使って，各データ列の相関係数を求めます。"
+      ],
+      "metadata": {
+        "id": "FGareYSG0lJ1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.corr()"
@@ -378,7 +387,7 @@
         "id": "XjeODd3MBd43",
         "outputId": "39bd5dd7-d342-4083-f5fb-d6d20dfa5f2b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1071,7 +1080,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "相関係数をseabornを使ってヒートマップ化します。"
+        "各指標の相関係数をseabornを使ってヒートマップ化します。"
       ],
       "metadata": {
         "id": "UMjVDt1ALsia"
@@ -1094,7 +1103,7 @@
         "id": "Z9dFjI5zBo5u",
         "outputId": "6f2664db-06ec-4fce-91e9-0a4f27d62aab"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
